[gd_scene load_steps=15 format=2]

[ext_resource path="res://Bilder/orange_player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Effects/ParticleTrail.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bilder/Effects/blue.png" type="Texture" id=4]
[ext_resource path="res://Effects/Jump.tscn" type="PackedScene" id=5]
[ext_resource path="res://Bilder/orange_eye.png" type="Texture" id=6]
[ext_resource path="res://UI/Font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Effects/Dash.tscn" type="PackedScene" id=8]

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.1
bounce = 0.5
absorbent = true

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CanvasItemMaterial" id=7]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.167702, 0.888199, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.3
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 1, 0 )
initial_velocity = 1.0
initial_velocity_random = 1.0
angular_velocity = 381.18
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 1.0
angle = 720.0
angle_random = 1.0
scale = 3.0
scale_random = 1.0
color_ramp = SubResource( 5 )
anim_offset = 1.0
anim_offset_random = 1.0

[node name="Player" type="RigidBody2D"]
collision_layer = 5
collision_mask = 5
physics_material_override = SubResource( 2 )
gravity_scale = 1.7
contacts_reported = 10
contact_monitor = true
angular_damp = 7.0
script = ExtResource( 2 )
walk_speed_ground = 15.0
walk_speed_air = 9.0
damp_x = 0.1
max_speed_x = 70.0
initial_jump_strength = 50.0
air_jump_strength = 5.0
max_jump_time = 0.2
max_air_jumps = 100
down_strength = 200.0
standing_strength = 15.0
hiting_power = 10.0
hiting_power_upwards = 15.0
dasheffect = ExtResource( 8 )

[node name="JumpEffect" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 5 )

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="GroundDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundDetector"]
shape = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 2, 5, -2, 5, -5, 4, -5, -2, -4, -5, 4, -5, 5, -2, 5, 4 )

[node name="ParticleTrail" parent="." instance=ExtResource( 3 )]
material = SubResource( 7 )
amount = 50
lifetime = 0.7
process_material = SubResource( 6 )
texture = ExtResource( 4 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="EyeContainer" type="Node" parent="."]

[node name="EyeLeft" type="Sprite" parent="EyeContainer"]
position = Vector2( -2.5, 1 )
texture = ExtResource( 6 )

[node name="EyeRight" type="Sprite" parent="EyeContainer"]
position = Vector2( 2.5, 1 )
texture = ExtResource( 6 )

[node name="EyeLeftTarget" type="Sprite" parent="."]
visible = false
position = Vector2( -1.92643, 1.4331 )
texture = ExtResource( 6 )

[node name="EyeRightTarget" type="Sprite" parent="."]
visible = false
position = Vector2( 2.69899, 0.449841 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = -5.0
margin_top = -9.0
margin_right = 29.0
margin_bottom = 19.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = ExtResource( 7 )
text = "1"
align = 1

[node name="DashRay" type="RayCast2D" parent="."]
collision_mask = 5

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="stop_jump"]
[connection signal="timeout" from="DashTimer" to="." method="stop_dashing"]
